# haskell-b

./: README.md  TopOrLocal.hs  answers.hs  arith3broken.hs  final.hs  fixit.hs  fourans.hs  greetIfCool1.hs  haskell-exercises.code-workspace  mood.hs  nonsense.hs  part2.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs  test.hs  type.hs  typeInference1.hs
chapter-eight/: factorial.hs  wordNumber.hs
chapter-eighteen/: exercises.hs
chapter-eighteen/monad/: monad.cabal
chapter-eighteen/monad/tests/: tests.hs
chapter-eleven/: aspattern.hs  farmers.hs  goats.hs  programmers.hs  razor.hs  tree.hs  types.hs  vigenere.hs
chapter-fifteen/: monoid.hs
chapter-fourteen/addition/: Addition.hs  addition.cabal
chapter-fourteen/morse/: morse.cabal
chapter-fourteen/morse/src/: Libraries.hs  Main.hs  Morse.hs
chapter-fourteen/morse/tests/: tests.hs
chapter-nine/: cipher.hs  eg.hs  poemlines.hs
chapter-nineteen/shorty/: shorty.cabal
chapter-nineteen/shorty/src/: Main.hs
chapter-seven/: answers.hs  arith4.hs  arthi2.hs  matchingTuples1.hs  registeredUser1.hs  scrap.hs
chapter-seventeen/: exercises.hs
chapter-seventeen/applicative/: applicative.cabal
chapter-seventeen/applicative/src/: Main.hs
chapter-seventeen/applicative/tests/: tests.hs
chapter-sixteen/: experiment.hs  functor.hs
chapter-ten/: database.hs  folds.hs
chapter-thirty/: CHANGELOG.md  chapter-thirty.cabal
chapter-thirty-one/: CHANGELOG.md  finger.db  hie.yml  ofinger.cabal
chapter-thirty-one/app/: Debug.hs  FingerInteractive.hs  Main.hs
chapter-thirty-one/data/: admin.json  new-admin.json
chapter-thirty-one/src/: MyLib.hs
chapter-thirty/app/: Main.hs
chapter-thirty/src/: Fail.hs  MyLib.hs  OurExceptions.hs  OurFamilyExceptions.hs  StoppingTheParty.hs  Tough.hs
chapter-twelve/: exercises.hs  test.hs  tst
chapter-twenty/: work.hs
chapter-twenty-eight/: CHANGELOG.md  chapter-twenty-eight.cabal
chapter-twenty-eight/app/: Main.hs
chapter-twenty-eight/src/: BS.hs  DifferenceList.hs  Moria.hs  MyLib.hs  MySequence.hs  MySet.hs  MyText.hs  MyVector.hs  Question.hs  Queue.hs
chapter-twenty-four/chapter-questions/: README.md  chapter-questions.cabal
chapter-twenty-four/chapter-questions/src/: Main.hs
chapter-twenty-four/questions/: questions.cabal
chapter-twenty-nine/: CHANGELOG.md  LICENSE  chapter-twenty-nine.cabal  decrypt.txt  file.txt
chapter-twenty-nine/app/: Main.hs
chapter-twenty-nine/src/: IniDirectories.hs  MyLib.hs  Nested.hs  Sharing.hs  Transparency.hs  Vigenere.hs  WhatHappens.hs
chapter-twenty-nine/src/examples/: README.md  second.ini
chapter-twenty-one/traverse/: traverse.cabal
chapter-twenty-one/traverse/tests/: tests.hs
chapter-twenty-seven/: CHANGELOG.md  chapter-twenty-seven.cabal
chapter-twenty-seven/app/: Main.hs
chapter-twenty-seven/src/: MyLib.hs
chapter-twenty-six/: CHANGELOG.md  chapter-twenty-six.cabal
chapter-twenty-six/src/: Excite.hs  Exercises.hs  HitCounter.hs  MyLib.hs  StrictList.hs
chapter-twenty-three/state/: state.cabal
chapter-twenty-three/state/src/: Main.hs
chapter-twenty-two/: boring.hs  reader-practice.hs  reader.hs
chapter-twenty-two/shorty/src/: Main.hs
hangman/: hangman.cabal
hangman/src/: Hangman.hs  Main.hs
hangman/tests/: tests.hs
parser-test/: parser-test.cabal
parser-test/src/: Main.hs
random-tst/: CHANGELOG.md  random-tst.cabal
random-tst/src/: Bt.hs  Fracs.hs  Gotcha.hs  Graphviz.hs  IP.hs  IPV6.hs  Ini.hs  Log.hs  Marshalling.hs  MyInt.hs  MyLib.hs  Numbers.hs  OuterInner.hs  Semver.hs
