name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Allen and Julie Moronuki
maintainer:          haskellbook.com
copyright:           2022 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

library
  exposed-modules:     Hangman
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5, containers, QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, split, hangman
  other-modules:       Hangman

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base, containers, hangman, QuickCheck, hspec
  default-language:    Haskell2010
