cabal-version:      2.4
name:               random-tst
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             oscargolding
maintainer:         oscargolding17@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                    , Ini
                    , Fracs
                    , Bt
                    , Marshalling
                    , Semver
                    , MyInt
                    , Numbers
                    , Log
                    , IP
                    , IPV6
                    , Graphviz
                    , Gotcha
                    , OuterInner

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      trifecta ^>=2.1.2,
                      raw-strings-qq ^>=1.1,
                      parsers ^>=0.12.10,
                      bytestring ^>=0.10.12.0,
                      containers ^>=0.6.5.1,
                      text ^>=1.2.4.1,
                      hspec ^>=2.9.7,
                      attoparsec ^>=0.14.4,
                      parsec ^>=3.1.14,
                      aeson ^>=2.0.3.0,
                      scientific ^>=0.3.7.0,
                      transformers ^>=0.5.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable random-tst
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        random-tst

    hs-source-dirs:   app
    default-language: Haskell2010
