name:                applicative
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/applicative#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable applicative
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base, containers, QuickCheck, hspec, checkers
  default-language:    Haskell2010
